# pikaia

./: .env.example  .env.production.example  .geminiignore  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  README.md  RULES.md  RULES_BACKEND.md  RULES_FRONTEND.md  SECURITY.md  TODO.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  ruff.toml  turbo.json
backend/: .dockerignore  .env.example  Dockerfile  package.json  pyproject.toml
backend/apps/accounts/: __init__.py  api.py  apps.py  constants.py  google_directory.py  models.py  oauth_providers.py  schemas.py  services.py  stytch_client.py  webhooks.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_remove_stytch_user_id.py  0003_add_member_deleted_at.py  0004_user_avatar_url.py  0005_user_phone_number.py  0006_add_google_oauth_tokens.py  0006_make_google_tokens_nullable.py  0007_user_phone_verified_at.py  0008_add_role_and_status_indexes.py  0009_add_member_organization_deleted_at_index.py  0009_alter_member_unique_together_and_more.py  0010_alter_member_unique_together_and_more.py  0011_fix_member_unique_constraint_for_soft_delete.py  0012_alter_member_deleted_at.py  0013_connected_account.py
backend/apps/billing/: __init__.py  api.py  apps.py  models.py  schemas.py  services.py  stripe_client.py  webhooks.py
backend/apps/core/: __init__.py  apps.py  auth.py  logging.py  middleware.py  models.py  schemas.py  security.py  throttling.py  types.py  url_validation.py  utils.py  webhooks.py
backend/apps/devices/: __init__.py  admin.py  api.py  apps.py  constants.py  exceptions.py  models.py  schemas.py  services.py
backend/apps/events/: __init__.py  apps.py  backends.py  context.py  lambda_handler.py  models.py  schemas.py  services.py
backend/apps/media/: __init__.py  api.py  models.py  schemas.py  services.py  svg_sanitizer.py
backend/apps/organizations/: __init__.py  apps.py  models.py
backend/apps/passkeys/: __init__.py  api.py  models.py  schemas.py  services.py  trusted_auth.py
backend/apps/sms/: __init__.py  admin.py  api.py  apps.py  aws_client.py  models.py  schemas.py  services.py
backend/apps/sms/migrations/: 0001_initial.py  (+2 more)
backend/apps/sync/: __init__.py  admin.py  api.py  apps.py  cursor.py  exceptions.py  models.py  registry.py  schemas.py  services.py
backend/apps/webhooks/: __init__.py  api.py  apps.py  events.py  hooks_api.py  models.py  schemas.py  services.py  signing.py
backend/config/: api.py  asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  local.py  production.py
backend/tests/: conftest.py
backend/tests/accounts/: factories.py  test_api.py  test_connected_accounts_api.py  test_google_directory.py  test_mobile_provision.py  test_models.py  test_oauth_providers.py  test_services.py  test_webhooks.py
backend/tests/billing/: factories.py  test_api.py  test_models.py  test_services.py  test_webhooks.py
backend/tests/core/: test_logging.py  test_middleware.py  test_security.py  test_soft_delete.py  test_throttling.py  test_url_validation.py  test_webhooks.py
backend/tests/devices/: __init__.py  factories.py  test_api.py  test_edge_cases.py  test_models.py  test_services.py
backend/tests/events/: __init__.py  test_backends.py  test_cleanup_outbox.py  test_context.py  test_generate_audit_schema.py  test_lambda_handler.py  test_middleware.py  test_models.py  test_schemas.py  test_services.py
backend/tests/media/: test_api.py  test_services.py  test_svg_sanitizer.py
backend/tests/organizations/: test_models.py
backend/tests/passkeys/: __init__.py  factories.py  test_api.py  test_services.py  test_trusted_auth.py
backend/tests/sms/: __init__.py  test_api.py  test_services.py
backend/tests/sync/: __init__.py  conftest.py  factories.py  test_api.py  test_commands.py  test_conflict_resolution.py  test_cursor.py  test_models.py  test_registry.py  test_services.py
backend/tests/webhooks/: factories.py  test_api.py  test_dispatch_integration.py  test_events.py  test_hooks_api.py  test_models.py  test_services.py  test_signing.py
infra/: README.md  app.py  cdk.json  package.json  pyproject.toml
infra/aws/iam/: github-oidc-trust-policy.json
infra/functions/audit-consumer/: generated_schema.py  handler.py
infra/functions/event-publisher/: handler.py  requirements.txt
infra/functions/image-transform/: index.js  package-lock.json  package.json
infra/scripts/: cleanup-aws.sh
infra/stacks/: __init__.py  app_stack.py  events_stack.py  frontend_stack.py  infra_resolver.py  media_stack.py  network_stack.py  observability_stack.py  shared_export_stack.py  validation.py  waf_stack.py
(+306 files in other folders)
