[project]
name = "pikaia-backend"
version = "0.1.0"
description = "Django Ninja backend for Pikaia"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0",
    "django-ninja>=1.5",
    "pydantic>=2.12",
    "pydantic-settings>=2.6",
    "webauthn>=2.0.0,<3.0.0",
    "psycopg[binary]>=3.3",
    "gunicorn>=23.0",
    "stytch>=14.0",
    "email-validator>=2.2",
    "django-cors-headers>=4.6",
    "stripe>=11.0",
    "django-storages[s3]>=1.14",
    "boto3>=1.35",
    "pillow>=11.0",
    "defusedxml>=0.7",
    "lxml>=5.0",
    "svix>=1.84.1",
    "structlog>=25.5",
    "uuid6>=2024.11.27",
]

[dependency-groups]
dev = [
    "django-stubs>=5.2.8",
    "factory-boy>=3.3",
    "mypy>=1.19.1",
    "psycopg2-binary>=2.9.11",
    "pyright>=1.1.408",
    "pytest>=9.0",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11",
    "ruff>=0.14",
    "types-factory-boy>=0.4.1",
]

[tool.ruff]
extend = "../ruff.toml"

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
strict = false
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["migrations"]

[tool.django-stubs]
django_settings_module = "config.settings.local"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = [
    "B101",  # assert used in tests
    "B311",  # random.random() - fine for non-security uses like jitter
]
